--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -1,4 +1,4 @@
-name: Build APK
+
 
 on:
   push:
@@ -17,6 +17,14 @@ jobs:
           python-version: '3.10'
 
       - name: Install buildozer and dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y git zip unzip openjdk-17-jdk python3-pip cython
+          pip3 install buildozername: Install buildozer and dependencies
+        run: |
+        sudo apt update
+    sudo apt install -y git zip unzip openjdk-17-jdk python3-pip cython
+    pip3 install buildozername: Install buildozer and dependencies
         run: |
           sudo apt update
           sudo apt install -y git zip unzip openjdk-17-jdk python3-pip
