--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -20,6 +20,8 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y git zip unzip openjdk-17-jdk python3-pip cython3
+          # 升级 autoconf 到最新版
+          sudo apt install -y autoconf-archive autoconf automake libtool
           pip3 install buildozer
 
       - name: Build APK
