--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -15,9 +15,9 @@ jobs:
         run: |
           docker run --rm \
             -v "${{ github.workspace }}:/home/user/hostcwd" \
-            -w /home/user/hostcwd \
-            kivy/buildozer \
-            bash -c "buildozer android debug"
+          -w /home/user/hostcwd \
+          kivy/buildozer \
+          sh -c "buildozer android debug"
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
