--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -16,8 +16,9 @@ jobs:
           docker run --rm \
             -v "${{ github.workspace }}:/home/user/hostcwd" \
             -w /home/user/hostcwd \
+            --entrypoint=/bin/bash \
             kivy/buildozer \
-            buildozer android debug
+            -c "buildozer android debug"
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
