--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -18,7 +18,9 @@ jobs:
             -w /home/user/hostcwd \
             --entrypoint=/bin/bash \
             kivy/buildozer \
-            -c "echo 'y' | buildozer android debug"
+            -c "
+             echo 'y' | buildozer android debug --sdk-build-tools=35.0.0
+            "
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
